fixed readme pointer to wiki

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-Instructions at http://wiki.chip.org/smart-platform
+Instructions at http://wiki.chip.org/smart-project
 
 All source code is licensed under GPLv3.
 
